--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: Jay_NotTheBird
 github_username: jay-khatri
-minimal_mistakes_skin: sunrise
+minimal_mistakes_skin: neon
 search: false
 
 # Build settings
