--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: JK
 email: me@jaykhatri.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is Jay Khatri's personal website!
 twitter_username: Jay_NotTheBird
 github_username: jay-khatri
 minimal_mistakes_skin: mint
