--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is Jay Khatri's personal website!
 twitter_username: Jay_NotTheBird
 github_username: jay-khatri
-minimal_mistakes_skin: mint
+minimal_mistakes_skin: aqua
 search: false
 
 repository: jay-khatri/jay-khatri.github.io
