--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ author:
       url: "https://github.com/jay-khatri"
     - label: "Resume"
       icon: "fas fa-fw fa-folder"
-      url: "https://docs.google.com/document/d/1auC-QsBX7Dm-Xrk02X43XvjapgcOH0rUAUeJDlRNHb8/edit?usp=sharing"
+      url: "https://drive.google.com/file/d/141dr5ydM6Fb2Y0RQh7TZvqUbiEz7vYuc/view?usp=sharing"
     - label: "Email"
       icon: "fas fa-fw fa-at"
       url: "mailto: me@jaykhatri.com"
@@ -86,7 +86,7 @@ footer:
       url: "https://github.com/jay-khatri"
     - label: "Resume"
       icon: "fas fa-fw fa-folder"
-      url: "https://docs.google.com/document/d/1auC-QsBX7Dm-Xrk02X43XvjapgcOH0rUAUeJDlRNHb8/edit?usp=sharing"
+      url: "https://drive.google.com/file/d/141dr5ydM6Fb2Y0RQh7TZvqUbiEz7vYuc/view?usp=sharing"
     - label: "Email"
       icon: "fas fa-fw fa-at"
       url: "mailto: me@jaykhatri.com"
